<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3B142"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="EXAMEN ADMISIÓN 2024 "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textViewApellidoNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/textView_ApellidosNombres"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textViewCorreoElectronico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/textView_CorreoElectronico"
        app:layout_constraintStart_toStartOf="@+id/textViewApellidoNombre"
        app:layout_constraintTop_toBottomOf="@+id/textViewApellidoNombre" />

    <TextView
        android:id="@+id/textViewClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/textView_Clave"
        app:layout_constraintStart_toStartOf="@+id/textViewCorreoElectronico"
        app:layout_constraintTop_toBottomOf="@+id/textViewCorreoElectronico" />

    <TextView
        android:id="@+id/textViewFechaNacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/textView_FechaNacimiento"
        app:layout_constraintStart_toStartOf="@+id/textViewClave"
        app:layout_constraintTop_toBottomOf="@+id/textViewClave" />

    <TextView
        android:id="@+id/textViewCarrera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/textView_Carrera"
        app:layout_constraintStart_toStartOf="@+id/textViewFechaNacimiento"
        app:layout_constraintTop_toBottomOf="@+id/textViewFechaNacimiento" />

    <TextView
        android:id="@+id/textViewMedio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/textView_Medio"
        app:layout_constraintStart_toStartOf="@+id/textViewCarrera"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupCarreras" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textViewApellidoNombre"
        app:layout_constraintStart_toEndOf="@+id/textViewApellidoNombre"
        app:layout_constraintTop_toTopOf="@+id/textViewApellidoNombre" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCorreoElectronico"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
        app:layout_constraintTop_toTopOf="@+id/textViewCorreoElectronico" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/textViewClave"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
        app:layout_constraintTop_toTopOf="@+id/textViewClave" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/textViewFechaNacimiento"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toTopOf="@+id/textViewFechaNacimiento" />

    <RadioGroup
        android:id="@+id/radioGroupCarreras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton_Sistemas" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton_IngenieriaAmbiental" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton_IngenieriaMecanica" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton_Administración" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBoxRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/checkBox_Radio"
        app:layout_constraintStart_toStartOf="@+id/textViewMedio"
        app:layout_constraintTop_toBottomOf="@+id/textViewMedio" />

    <CheckBox
        android:id="@+id/checkBoxInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox_Internet"
        app:layout_constraintStart_toStartOf="@+id/checkBoxRadio"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRadio" />

    <CheckBox
        android:id="@+id/checkBoxAmigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox_Amigo"
        app:layout_constraintStart_toStartOf="@+id/checkBoxInternet"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxInternet" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox_Publicidad"
        app:layout_constraintStart_toStartOf="@+id/checkBoxAmigo"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAmigo" />

    <Button
        android:id="@+id/buttonEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#111940"
        android:backgroundTint="#191BA8"
        android:backgroundTintMode="add"
        android:drawableLeft="@drawable/baseline_info_24"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox4"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>